[B]v1.0.7[/B]
- Added missing video-quallities to playing list.
[B]v1.0.6[/B]
- Added support for "allmyvideos" links.
- Sort list of sources by video quality.
- Auto play will try to play the best avaliable quality of videos.
- Fix auto-play bug when there is "yify" in sources list.
[B]v1.0.5[/B]
- Added quality label to item's name.
- Added support for "yify" links.
[B]v1.0.4[/B]
- All playing options in one list. (autoPlay option removed from addon settings.)
[B]v1.0.3[/B]
- Default domain change to http://www.movix.me
- You can choose filter search to "All", "Movies" or "Series". 
- Added "Movies" and "Series" categories.
- Fix for "moovreel" and "filehoot" links
[B]v1.0.2[/B]
- Fix for watching series at auto play mode.
[B]v1.0.1[/B]
- Added missing categories.
- Auto play mode by default (can change at addon settings).
[B]v1.0.0[/B]
- Initial release